resources/kagent/ingress.yml
---
# SPDX-license-identifier: Apache-2.0
##############################################################################
# Copyright (c) 2025
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Apache License, Version 2.0
# which accompanies this distribution, and is available at
# http://www.apache.org/licenses/LICENSE-2.0
##############################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kagent
                port:
                  number: 80
            path: /
            pathType: Prefix
